--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
       </button>
     </div>
   </header>
+
+  <div class="mv">
+    <div class="mv__inner">
+      <div class="mv__content">
+        <p class="mv__lead">
+          <span class="mv__lead1">「めざめる」の日常を</span>
+          <span class="mv__lead2">もっとおもしろく。</span>
+        </p>
+        <p class="mv__description">
+          OHA!は、朝起きたい人と<br>朝起こされたい人が<br>ランダムにマッチングしちゃう<br>通話アプリです。
+        </p>
+        <div class="mv__button">
+          <a href="">アプリダウンロード</a>
+        </div>
+      </div>
+      <div class="mv__image">
+        <img src="./img/first-view-img.png" alt="">
+      </div>
+    </div>
+  </div>
   <script src="./js/script.js"></script>
 </body>
 
