導入実績セクションの作成

--- a/index.html
+++ b/index.html
@@ -55,6 +55,23 @@
       </div>
     </div>
   </div>
+
+  <section class="case">
+    <div class="case__inner">
+      <h2 class="case__title">導入実績</h2>
+      <div class="case__items">
+        <div class="case__item"><img src="./img/case1-img.png" alt=""></div>
+        <div class="case__item"><img src="./img/case2-img.png" alt=""></div>
+        <div class="case__item"><img src="./img/case3-img.png" alt=""></div>
+        <div class="case__item"><img src="./img/case4-img.png" alt=""></div>
+        <div class="case__item"><img src="./img/case5-img.png" alt=""></div>
+        <div class="case__item"><img src="./img/case6-img.png" alt=""></div>
+        <div class="case__item"><img src="./img/case7-img.png" alt=""></div>
+        <div class="case__item"><img src="./img/case8-img.png" alt=""></div>
+      </div>
+    </div>
+  </section>
+
   <script src="./js/script.js"></script>
 </body>
 
