aboutセクションの追加

--- a/index.html
+++ b/index.html
@@ -104,6 +104,24 @@
     </div>
   </section>
 
+  <section class="about">
+    <div class="about__inner">
+      <div class="about__title"><img src="./img/about-logo.png" alt="OHA!"></div>
+      <div class="about__content">
+        <div class="about__image"><img src="./img/about-img.png" alt=""></div>
+        <p class="about__text">突然ですが、あなたは朝起きる時、<br class="hidden-pc">誰かに起こされれば起きれる派か、<br>
+          誰かを起こす予定があれば起きれる派か、<br class="hidden-pc">どちらかというとどちらでしょうか？<br>
+          朝起きるという行為は、<br class="hidden-pc">徹夜してなければ1年に365回、<br>
+          10年だと3652回、<br class="hidden-pc">50年だと18262回やってきます。<br>
+          そんなに回数があるんなら、<br class="hidden-pc">ちょっとイベントにしてみても<br class="hidden-pc">楽しいんじゃない？<br>
+          というアイデアで誕生したのがOHA!です。<br>
+          日本中の起こしたい人と起こされたい人が<br class="hidden-pc">ランダムにマッチングして<br class="hidden-pc">起こし起こされることで、<br>朝の日常にちょっとした刺激が生まれます。</p>
+        <div class="about__pop">＼開発者はお坊さん？／</div>
+        <div class="about__button"><button>誕生ストーリーを見る</button></div>
+      </div>
+    </div>
+  </section>
+
   <script src="./js/script.js"></script>
 </body>
 
