movieセクションの追加

--- a/index.html
+++ b/index.html
@@ -115,9 +115,25 @@
           10年だと3652回、<br class="hidden-pc">50年だと18262回やってきます。<br>
           そんなに回数があるんなら、<br class="hidden-pc">ちょっとイベントにしてみても<br class="hidden-pc">楽しいんじゃない？<br>
           というアイデアで誕生したのがOHA!です。<br>
-          日本中の起こしたい人と起こされたい人が<br class="hidden-pc">ランダムにマッチングして<br class="hidden-pc">起こし起こされることで、<br>朝の日常にちょっとした刺激が生まれます。</p>
+          日本中の起こしたい人と起こされたい人が<br class="hidden-pc">ランダムにマッチングして<br
+            class="hidden-pc">起こし起こされることで、<br>朝の日常にちょっとした刺激が生まれます。</p>
         <div class="about__pop">＼開発者はお坊さん？／</div>
         <div class="about__button"><button>誕生ストーリーを見る</button></div>
+      </div>
+    </div>
+  </section>
+
+  <section class="movie">
+    <div class="movie__inner">
+      <div class="movie__title">
+        <div class="movie__title-en">MOVIE</div>
+        <div class="movie__title-ja">2秒で分かる！OHA!について</div>
+      </div>
+      <div class="movie__iframe">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/4XTF16CcqPc?si=riwfv22WSpMaPdXr"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
   </section>
