--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="" class="header__link">サービスについて</a>
         <a href="" class="header__link">使い方</a>
         <a href="" class="header__link">メリット</a>
-        <a href="" class="header__button">お問い合わせ</a>
+        <a href="" class="header__button button">お問い合わせ</a>
       </nav>
       <button class="header__open drawer-icon">
         <span class="drawer-icon__bar"></span>
@@ -47,7 +47,7 @@
           OHA!は、朝起きたい人と<br>朝起こされたい人が<br>ランダムにマッチングしちゃう<br>通話アプリです。
         </p>
         <div class="mv__button">
-          <a href="">アプリダウンロード</a>
+          <a href="" class="button button--type2">アプリダウンロード</a>
         </div>
       </div>
       <div class="mv__image">
@@ -73,7 +73,7 @@
   </section>
 
   <section class="news">
-    <div class="news__inner">
+    <div class="news__inner inner">
       <div class="news__card">
         <h2 class="news__title">NEWS</h2>
         <div class="news__lists">
@@ -118,16 +118,18 @@
           日本中の起こしたい人と起こされたい人が<br class="hidden-pc">ランダムにマッチングして<br
             class="hidden-pc">起こし起こされることで、<br>朝の日常にちょっとした刺激が生まれます。</p>
         <div class="about__pop">＼開発者はお坊さん？／</div>
-        <div class="about__button"><button>誕生ストーリーを見る</button></div>
+        <div class="about__button">
+          <button class="button">誕生ストーリーを見る</button>
+        </div>
       </div>
     </div>
   </section>
 
   <section class="movie">
     <div class="movie__inner">
-      <div class="movie__title">
-        <div class="movie__title-en">MOVIE</div>
-        <div class="movie__title-ja">2秒で分かる！OHA!について</div>
+      <div class="heading">
+        <div class="heading__en">MOVIE</div>
+        <div class="heading__ja">2秒で分かる！OHA!について</div>
       </div>
       <div class="movie__iframe">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/4XTF16CcqPc?si=riwfv22WSpMaPdXr"
