--- a/index.html
+++ b/index.html
@@ -140,6 +140,119 @@
     </div>
   </section>
 
+  <section class="how-to-use">
+    <div class="how-to-use__inner inner">
+      <div class="how-to-use__title">
+        <div class="heading">
+          <div class="heading__en">HOW TO USE</div>
+          <div class="heading__ja">OHA!の使い方</div>
+        </div>
+      </div>
+      <div class="how-to-use__boxes">
+        <div class="how-to-use__box">
+          <div class="how-to-use__box-title">
+            誰かを起こす予定があれば<br class="hidden-pc">起きれる派の人
+            <img src="./img/step1-title-img.png" alt="">
+          </div>
+          <div class="how-to-use__steps">
+            <div class="how-to-use__step">
+              <div class="step-box">
+                <div class="step-box__head">
+                  <div class="step-box__head-text">STEP</div>
+                  <div class="step-box__head-number">01</div>
+                </div>
+                <div class="step-box__body">
+                  <div class="step-box__image">
+                    <img src="./img/step1-1-img.png" alt="">
+                  </div>
+                  <div class="step-box__text">起こしたい時間を<br>設定します</div>
+                </div>
+              </div>
+            </div>
+            <div class="how-to-use__step">
+              <div class="step-box">
+                <div class="step-box__head">
+                  <div class="step-box__head-text">STEP</div>
+                  <div class="step-box__head-number">02</div>
+                </div>
+                <div class="step-box__body">
+                  <div class="step-box__image">
+                    <img src="./img/step1-2-img.png" alt="">
+                  </div>
+                  <div class="step-box__text">スマホを枕元に置いて<br>寝ます</div>
+                </div>
+              </div>
+            </div>
+            <div class="how-to-use__step">
+              <div class="step-box">
+                <div class="step-box__head">
+                  <div class="step-box__head-text">STEP</div>
+                  <div class="step-box__head-number">03</div>
+                </div>
+                <div class="step-box__body">
+                  <div class="step-box__image">
+                    <img src="./img/step1-3-img.png" alt="">
+                  </div>
+                  <div class="step-box__text">起こすことによって<br>起きることができます</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="how-to-use__box is-type2">
+          <div class="how-to-use__box-title">
+            誰かに起こされれば<br class="hidden-pc">起きれる派の人
+            <img src="./img/step2-title-img.png" alt="">
+          </div>
+          <div class="how-to-use__steps">
+            <div class="how-to-use__step">
+              <div class="step-box">
+                <div class="step-box__head">
+                  <div class="step-box__head-text">STEP</div>
+                  <div class="step-box__head-number">01</div>
+                </div>
+                <div class="step-box__body">
+                  <div class="step-box__image">
+                    <img src="./img/step2-1-img.png" alt="">
+                  </div>
+                  <div class="step-box__text">起こされたい時間を<br>設定します</div>
+                </div>
+              </div>
+            </div>
+            <div class="how-to-use__step">
+              <div class="step-box">
+                <div class="step-box__head">
+                  <div class="step-box__head-text">STEP</div>
+                  <div class="step-box__head-number">02</div>
+                </div>
+                <div class="step-box__body">
+                  <div class="step-box__image">
+                    <img src="./img/step2-2-img.png" alt="">
+                  </div>
+                  <div class="step-box__text">スマホを枕元に置いて<br>寝ます</div>
+                </div>
+              </div>
+            </div>
+            <div class="how-to-use__step">
+              <div class="step-box">
+                <div class="step-box__head">
+                  <div class="step-box__head-text">STEP</div>
+                  <div class="step-box__head-number">03</div>
+                </div>
+                <div class="step-box__body">
+                  <div class="step-box__image">
+                    <img src="./img/step2-3-img.png" alt="">
+                  </div>
+                  <div class="step-box__text">起こされることによって<br>起きることができます</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="./js/script.js"></script>
 </body>
 
