cta, footer, pagetopの追加

--- a/index.html
+++ b/index.html
@@ -314,7 +314,16 @@
     </div>
   </section>
 
-
+  <div class="cta">
+    <div class="cta__inner inner">
+      <p class="cta__text">
+        どうですか？<br class="hidden-pc"><span class="inline-block">早速今日から使ってみたく</span><span class="inline-block">なりましたか？</span><br>てかほんと使って。お願い。
+      </p>
+      <div class="cta__button">
+        <a href="" class="button">今すぐダウンロード</a>
+      </div>
+    </div>
+  </div>
 
   <div class="compare">
     <div class="compare__inner inner">
@@ -459,6 +468,16 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="footer__inner inner">
+      <small class="footer__copyright">
+        COPYRIGHT 2023 株式会社デイトラ
+      </small>
+    </div>
+  </footer>
+
+  <a href="" class="pagetop"><img src="./img/pagetop-img.png" alt=""></a>
 
   <script src="./js/script.js"></script>
 </body>
