ドロワーメニューの追加

--- a/index.html
+++ b/index.html
@@ -28,13 +28,24 @@
         <a href="" class="header__link">メリット</a>
         <a href="" class="header__button button">お問い合わせ</a>
       </nav>
-      <button class="header__open drawer-icon">
+      <button id="js-drawer-icon" class="header__open drawer-icon">
         <span class="drawer-icon__bar"></span>
         <span class="drawer-icon__bar"></span>
         <span class="drawer-icon__bar"></span>
       </button>
     </div>
   </header>
+
+  <div id="js-drawer-content" class="drawer-content">
+    <nav class="drawer-content__menu">
+      <a href="" class="drawer-content__link">サービスについて</a>
+      <a href="" class="drawer-content__link">使い方</a>
+      <a href="" class="drawer-content__link">メリット</a>
+      <div class="drawer-content__button">
+        <a href="" class="button">お問い合わせ</a>
+      </div>
+    </nav>
+  </div>
 
   <div class="mv">
     <div class="mv__inner">
@@ -317,7 +328,8 @@
   <div class="cta">
     <div class="cta__inner inner">
       <p class="cta__text">
-        どうですか？<br class="hidden-pc"><span class="inline-block">早速今日から使ってみたく</span><span class="inline-block">なりましたか？</span><br>てかほんと使って。お願い。
+        どうですか？<br class="hidden-pc"><span class="inline-block">早速今日から使ってみたく</span><span
+          class="inline-block">なりましたか？</span><br>てかほんと使って。お願い。
       </p>
       <div class="cta__button">
         <a href="" class="button">今すぐダウンロード</a>
@@ -479,6 +491,7 @@
 
   <a href="" class="pagetop"><img src="./img/pagetop-img.png" alt=""></a>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
