--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+JP:wght@100..900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -426,6 +427,51 @@
     </div>
   </section>
 
+  <section class="gallery">
+    <div class="gallery__inner inner">
+      <div class="gallery__title">
+        <div class="heading">
+          <div class="heading__en">GALLERY</div>
+          <div class="heading__ja">ギャラリー</div>
+        </div>
+      </div>
+      <div class="gallery__slider">
+        <!-- Slider main container -->
+        <div id="js-gallery-swiper" class="swiper gallery__swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide gallery__slide">
+              <div class="gallery-card">
+                <div class="gallery-card__image"><img src="./img/gallery-1.png" alt=""></div>
+                <p class="gallery-card__text">最高な海。を拝んでいる私最高...</p>
+              </div>
+            </div>
+            <div class="swiper-slide gallery__slide">
+              <div class="gallery-card">
+                <div class="gallery-card__image"><img src="./img/gallery-2.png" alt=""></div>
+                <p class="gallery-card__text">モーニングは一番のり。今日も私えらい。</p>
+              </div>
+            </div>
+            <div class="swiper-slide gallery__slide">
+              <div class="gallery-card">
+                <div class="gallery-card__image"><img src="./img/gallery-3.png" alt=""></div>
+                <p class="gallery-card__text">風車のある公園ヨガ。みんな私に釘付け。</p>
+              </div>
+            </div>
+          </div>
+          <!-- If we need pagination -->
+          <div id="js-gallery-pagination" class="swiper-pagination gallery__pagination"></div>
+
+          <!-- If we need navigation buttons -->
+          <div id="js-gallery-prev" class="swiper-button-prev gallery__prev"></div>
+          <div id="js-gallery-next" class="swiper-button-next gallery__next"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <section class="contact">
     <div class="contact__inner inner">
       <div class="contact__box">
@@ -541,6 +587,7 @@
 
   <a href="" class="pagetop"><img src="./img/pagetop-img.png" alt=""></a>
 
+  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="./js/script.js"></script>
 </body>
