--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <a href=""><img src="./img/logo.png" alt=""></a>
       </h1>
       <nav class="header__nav">
-        <a href="" class="header__link">サービスについて</a>
-        <a href="" class="header__link">使い方</a>
-        <a href="" class="header__link">メリット</a>
-        <a href="" class="header__button button">お問い合わせ</a>
+        <a href="#about" class="header__link">サービスについて</a>
+        <a href="#how-to-use" class="header__link">使い方</a>
+        <a href="#merit" class="header__link">メリット</a>
+        <a href="#contact" class="header__button button">お問い合わせ</a>
       </nav>
       <button id="js-drawer-icon" class="header__open drawer-icon">
         <span class="drawer-icon__bar"></span>
@@ -39,11 +39,11 @@
 
   <div id="js-drawer-content" class="drawer-content">
     <nav class="drawer-content__menu">
-      <a href="" class="drawer-content__link">サービスについて</a>
-      <a href="" class="drawer-content__link">使い方</a>
-      <a href="" class="drawer-content__link">メリット</a>
+      <a href="#about" class="drawer-content__link">サービスについて</a>
+      <a href="#how-to-use" class="drawer-content__link">使い方</a>
+      <a href="#merit" class="drawer-content__link">メリット</a>
       <div class="drawer-content__button">
-        <a href="" class="button">お問い合わせ</a>
+        <a href="#contact" class="button">お問い合わせ</a>
       </div>
     </nav>
   </div>
@@ -59,7 +59,7 @@
           OHA!は、朝起きたい人と<br>朝起こされたい人が<br>ランダムにマッチングしちゃう<br>通話アプリです。
         </p>
         <div class="mv__button">
-          <a href="" class="button button--type2">アプリダウンロード</a>
+          <a href="#contact" class="button button--type2">アプリダウンロード</a>
         </div>
       </div>
       <div class="mv__image">
@@ -116,7 +116,7 @@
     </div>
   </section>
 
-  <section class="about">
+  <section id="about" class="about">
     <div class="about__inner">
       <div class="about__title"><img src="./img/about-logo.png" alt="OHA!"></div>
       <div class="about__content">
@@ -171,7 +171,7 @@
     </div>
   </section>
 
-  <section class="how-to-use">
+  <section id="how-to-use" class="how-to-use">
     <div class="how-to-use__inner inner">
       <div class="how-to-use__title">
         <div class="heading">
@@ -284,7 +284,7 @@
     </div>
   </section>
 
-  <section class="merit">
+  <section id="merit" class="merit">
     <div class="merit__inner inner">
       <div class="merit__title">
         <div class="heading">
@@ -352,7 +352,7 @@
           class="inline-block">なりましたか？</span><br>てかほんと使って。お願い。
       </p>
       <div class="cta__button">
-        <a href="" class="button">今すぐダウンロード</a>
+        <a href="#contact" class="button">今すぐダウンロード</a>
       </div>
     </div>
   </div>
@@ -491,7 +491,7 @@
   </section>
 
 
-  <section class="contact">
+  <section id="contact" class="contact">
     <div class="contact__inner inner">
       <div class="contact__box">
         <div class="contact__title">
@@ -604,7 +604,7 @@
     </div>
   </footer>
 
-  <a href="" class="pagetop"><img src="./img/pagetop-img.png" alt=""></a>
+  <a href="#" class="pagetop"><img src="./img/pagetop-img.png" alt=""></a>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
