フローティングアイテム（ページトップボタン）の追加

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
     </div>
   </footer>
 
-  <a href="#" class="pagetop"><img src="./img/pagetop-img.png" alt=""></a>
+  <a href="#" id="js-pagetop" class="pagetop"><img src="./img/pagetop-img.png" alt=""></a>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
