フェードインの追加

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <section class="case">
     <div class="case__inner">
-      <h2 class="case__title">導入実績</h2>
+      <h2 class="case__title js-in-view fade-in-up">導入実績</h2>
       <div class="case__items">
         <div class="case__item"><img src="./img/case1-img.png" alt=""></div>
         <div class="case__item"><img src="./img/case2-img.png" alt=""></div>
@@ -87,7 +87,7 @@
   <section class="news">
     <div class="news__inner inner">
       <div class="news__card">
-        <h2 class="news__title">NEWS</h2>
+        <h2 class="news__title js-in-view fade-in-up">NEWS</h2>
         <div class="news__lists">
           <a href="" class="news__list news-link">
             <div class="news-link__meta">
@@ -118,7 +118,7 @@
 
   <section id="about" class="about">
     <div class="about__inner">
-      <div class="about__title"><img src="./img/about-logo.png" alt="OHA!"></div>
+      <div class="about__title js-in-view fade-in-up"><img src="./img/about-logo.png" alt="OHA!"></div>
       <div class="about__content">
         <div class="about__image"><img src="./img/about-img.png" alt=""></div>
         <p class="about__text">突然ですが、あなたは朝起きる時、<br class="hidden-pc">誰かに起こされれば起きれる派か、<br>
@@ -158,7 +158,7 @@
 
   <section class="movie">
     <div class="movie__inner">
-      <div class="heading">
+      <div class="heading js-in-view fade-in-up">
         <div class="heading__en">MOVIE</div>
         <div class="heading__ja">2秒で分かる！OHA!について</div>
       </div>
@@ -174,7 +174,7 @@
   <section id="how-to-use" class="how-to-use">
     <div class="how-to-use__inner inner">
       <div class="how-to-use__title">
-        <div class="heading">
+        <div class="heading js-in-view fade-in-up">
           <div class="heading__en">HOW TO USE</div>
           <div class="heading__ja">OHA!の使い方</div>
         </div>
@@ -287,7 +287,7 @@
   <section id="merit" class="merit">
     <div class="merit__inner inner">
       <div class="merit__title">
-        <div class="heading">
+        <div class="heading js-in-view fade-in-up">
           <div class="heading__en">MERIT</div>
           <div class="heading__ja">OHA!を使うメリット</div>
         </div>
@@ -359,7 +359,7 @@
 
   <div class="compare">
     <div class="compare__inner inner">
-      <div class="compare__title">他のサービスとの違い</div>
+      <div class="compare__title js-in-view fade-in-up">他のサービスとの違い</div>
       <div class="compare__content">
         <table class="compare__table">
           <thead>
@@ -399,7 +399,7 @@
   <section class="qa">
     <div class="qa__inner inner">
       <div class="qa__title">
-        <div class="heading">
+        <div class="heading js-in-view fade-in-up">
           <div class="heading__en">Q&A</div>
           <div class="heading__ja">よくあるご質問</div>
         </div>
@@ -449,7 +449,7 @@
   <section class="gallery">
     <div class="gallery__inner inner">
       <div class="gallery__title">
-        <div class="heading">
+        <div class="heading js-in-view fade-in-up">
           <div class="heading__en">GALLERY</div>
           <div class="heading__ja">ギャラリー</div>
         </div>
@@ -490,12 +490,11 @@
     </div>
   </section>
 
-
   <section id="contact" class="contact">
     <div class="contact__inner inner">
       <div class="contact__box">
         <div class="contact__title">
-          <div class="heading">
+          <div class="heading js-in-view fade-in-up">
             <div class="heading__en">CONTACT</div>
             <div class="heading__ja">お問い合わせ</div>
           </div>
