--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex">
-  <title>Document</title>
+  <title>OHA!</title>
+  <meta name="description" content="OHA!は、朝起きたい人と朝起こされたい人がランダムにマッチングしちゃう通話アプリです。">
+  <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+
+  <meta property="og:title" content="OHA">
+  <meta property="og:description" content="は、朝起きたい人と朝起こされたい人がランダムにマッチングしちゃう通話アプリです。">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://motojima-web.com/oha">
+  <meta property="og:image" content="./img/ogp.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
