--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <header class="header">
     <div class="header__inner">
       <h1 class="header__logo">
-        <a href=""><img src="./img/logo.png" alt=""></a>
+        <a href="/"><img src="./img/logo.png" alt="OHA!"></a>
       </h1>
       <nav class="header__nav">
         <a href="#about" class="header__link">サービスについて</a>
@@ -71,7 +71,7 @@
         </div>
       </div>
       <div class="mv__image">
-        <img src="./img/first-view-img.png" alt="">
+        <img src="./img/first-view-img.png" alt="アプリ画面">
       </div>
     </div>
   </div>
@@ -80,14 +80,14 @@
     <div class="case__inner">
       <h2 class="case__title js-in-view fade-in-up">導入実績</h2>
       <div class="case__items">
-        <div class="case__item"><img src="./img/case1-img.png" alt=""></div>
-        <div class="case__item"><img src="./img/case2-img.png" alt=""></div>
-        <div class="case__item"><img src="./img/case3-img.png" alt=""></div>
-        <div class="case__item"><img src="./img/case4-img.png" alt=""></div>
-        <div class="case__item"><img src="./img/case5-img.png" alt=""></div>
-        <div class="case__item"><img src="./img/case6-img.png" alt=""></div>
-        <div class="case__item"><img src="./img/case7-img.png" alt=""></div>
-        <div class="case__item"><img src="./img/case8-img.png" alt=""></div>
+        <div class="case__item"><img src="./img/case1-img.png" alt="田中おは郎"></div>
+        <div class="case__item"><img src="./img/case2-img.png" alt="TAKANO"></div>
+        <div class="case__item"><img src="./img/case3-img.png" alt="課長"></div>
+        <div class="case__item"><img src="./img/case4-img.png" alt="nABECYAn"></div>
+        <div class="case__item"><img src="./img/case5-img.png" alt="隣の高橋さん"></div>
+        <div class="case__item"><img src="./img/case6-img.png" alt="KEIKO"></div>
+        <div class="case__item"><img src="./img/case7-img.png" alt="Under Mountain"></div>
+        <div class="case__item"><img src="./img/case8-img.png" alt="SAITO"></div>
       </div>
     </div>
   </section>
@@ -128,7 +128,7 @@
     <div class="about__inner">
       <div class="about__title js-in-view fade-in-up"><img src="./img/about-logo.png" alt="OHA!"></div>
       <div class="about__content">
-        <div class="about__image"><img src="./img/about-img.png" alt=""></div>
+        <div class="about__image"><img src="./img/about-img.png" alt="アプリ画面"></div>
         <p class="about__text">突然ですが、あなたは朝起きる時、<br class="hidden-pc">誰かに起こされれば起きれる派か、<br>
           誰かを起こす予定があれば起きれる派か、<br class="hidden-pc">どちらかというとどちらでしょうか？<br>
           朝起きるという行為は、<br class="hidden-pc">徹夜してなければ1年に365回、<br>
@@ -191,7 +191,7 @@
         <div class="how-to-use__box">
           <div class="how-to-use__box-title">
             誰かを起こす予定があれば<br class="hidden-pc">起きれる派の人
-            <img src="./img/step1-title-img.png" alt="">
+            <img src="./img/step1-title-img.png" alt="女性のアイコン">
           </div>
           <div class="how-to-use__steps">
             <div class="how-to-use__step">
@@ -202,7 +202,7 @@
                 </div>
                 <div class="step-box__body">
                   <div class="step-box__image">
-                    <img src="./img/step1-1-img.png" alt="">
+                    <img src="./img/step1-1-img.png" alt="STEP1">
                   </div>
                   <div class="step-box__text">起こしたい時間を<br>設定します</div>
                 </div>
@@ -216,7 +216,7 @@
                 </div>
                 <div class="step-box__body">
                   <div class="step-box__image">
-                    <img src="./img/step1-2-img.png" alt="">
+                    <img src="./img/step1-2-img.png" alt="STEP2">
                   </div>
                   <div class="step-box__text">スマホを枕元に置いて<br>寝ます</div>
                 </div>
@@ -230,7 +230,7 @@
                 </div>
                 <div class="step-box__body">
                   <div class="step-box__image">
-                    <img src="./img/step1-3-img.png" alt="">
+                    <img src="./img/step1-3-img.png" alt="STEP3">
                   </div>
                   <div class="step-box__text">起こすことによって<br>起きることができます</div>
                 </div>
@@ -241,7 +241,7 @@
         <div class="how-to-use__box is-type2">
           <div class="how-to-use__box-title">
             誰かに起こされれば<br class="hidden-pc">起きれる派の人
-            <img src="./img/step2-title-img.png" alt="">
+            <img src="./img/step2-title-img.png" alt="男性のアイコン">
           </div>
           <div class="how-to-use__steps">
             <div class="how-to-use__step">
@@ -252,7 +252,7 @@
                 </div>
                 <div class="step-box__body">
                   <div class="step-box__image">
-                    <img src="./img/step2-1-img.png" alt="">
+                    <img src="./img/step2-1-img.png" alt="STEP1">
                   </div>
                   <div class="step-box__text">起こされたい時間を<br>設定します</div>
                 </div>
@@ -266,7 +266,7 @@
                 </div>
                 <div class="step-box__body">
                   <div class="step-box__image">
-                    <img src="./img/step2-2-img.png" alt="">
+                    <img src="./img/step2-2-img.png" alt="STEP2">
                   </div>
                   <div class="step-box__text">スマホを枕元に置いて<br>寝ます</div>
                 </div>
@@ -280,7 +280,7 @@
                 </div>
                 <div class="step-box__body">
                   <div class="step-box__image">
-                    <img src="./img/step2-3-img.png" alt="">
+                    <img src="./img/step2-3-img.png" alt="STEP3">
                   </div>
                   <div class="step-box__text">起こされることによって<br>起きることができます</div>
                 </div>
@@ -304,7 +304,7 @@
         <div class="merit__box">
           <div class="merit-box">
             <div class="merit-box__content">
-              <div class="merit-box__image"><img src="./img/merit1-img.png" alt=""></div>
+              <div class="merit-box__image"><img src="./img/merit1-img.png" alt="猫と挨拶"></div>
               <div class="merit-box__body">
                 <h3 class="merit-box__head">
                   <div class="merit-box__number">1</div>
@@ -320,7 +320,7 @@
         <div class="merit__box">
           <div class="merit-box is-reverse">
             <div class="merit-box__content">
-              <div class="merit-box__image"><img src="./img/merit2-img.png" alt=""></div>
+              <div class="merit-box__image"><img src="./img/merit2-img.png" alt="ティッシュボックスが当たる"></div>
               <div class="merit-box__body">
                 <h3 class="merit-box__head">
                   <div class="merit-box__number">2</div>
@@ -336,7 +336,7 @@
         <div class="merit__box">
           <div class="merit-box">
             <div class="merit-box__content">
-              <div class="merit-box__image"><img src="./img/merit3-img.png" alt=""></div>
+              <div class="merit-box__image"><img src="./img/merit3-img.png" alt="へそくりが出てきた"></div>
               <div class="merit-box__body">
                 <h3 class="merit-box__head">
                   <div class="merit-box__number">3</div>
@@ -470,19 +470,19 @@
             <!-- Slides -->
             <div class="swiper-slide gallery__slide">
               <div class="gallery-card">
-                <div class="gallery-card__image"><img src="./img/gallery-1.png" alt=""></div>
+                <div class="gallery-card__image"><img src="./img/gallery-1.png" alt="風景写真"></div>
                 <p class="gallery-card__text">最高な海。を拝んでいる私最高...</p>
               </div>
             </div>
             <div class="swiper-slide gallery__slide">
               <div class="gallery-card">
-                <div class="gallery-card__image"><img src="./img/gallery-2.png" alt=""></div>
+                <div class="gallery-card__image"><img src="./img/gallery-2.png" alt="モーニングの写真"></div>
                 <p class="gallery-card__text">モーニングは一番のり。今日も私えらい。</p>
               </div>
             </div>
             <div class="swiper-slide gallery__slide">
               <div class="gallery-card">
-                <div class="gallery-card__image"><img src="./img/gallery-3.png" alt=""></div>
+                <div class="gallery-card__image"><img src="./img/gallery-3.png" alt="風車のある公園の写真"></div>
                 <p class="gallery-card__text">風車のある公園ヨガ。みんな私に釘付け。</p>
               </div>
             </div>
@@ -611,7 +611,7 @@
     </div>
   </footer>
 
-  <a href="#" id="js-pagetop" class="pagetop"><img src="./img/pagetop-img.png" alt=""></a>
+  <a href="#" id="js-pagetop" class="pagetop"><img src="./img/pagetop-img.png" alt="ページトップアイコン"></a>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
