ogpの文字抜け修正

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 
   <meta property="og:title" content="OHA">
-  <meta property="og:description" content="は、朝起きたい人と朝起こされたい人がランダムにマッチングしちゃう通話アプリです。">
+  <meta property="og:description" content="OHA!は、朝起きたい人と朝起こされたい人がランダムにマッチングしちゃう通話アプリです。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://motojima-web.com/oha">
   <meta property="og:image" content="./img/ogp.png">
